--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 numpy
 pandas
+kagglehub
 scikit-learn
 scipy
 icecream
 xlrd
 tomli-w
+ctgan
 zero
 category_encoders
 imbalanced-learn
@@ -14,6 +16,9 @@ datasets
 peft==0.9.0
 ml_collections
 sdmetrics==0.11.1
+dp-cgans>=0.1.0
+sdv==1.6.0
+rdt==1.9.0
 prdc
 rdt
 openpyxl
